crates/rimz/src/sidebar_pane/render/snapshots/rimz__sidebar_pane__render__tests__worktree_attention_map.snap
---
source: crates/rimz/src/sidebar_pane/render/tests/mod.rs
expression: screen
---
 ⌘ query-engine

 ◎ 0
 ¤ 3
 ────────────────────────────────────
 ? 2   ! 0   ⏸︎ 0   ✓ 0      ⢿ 1   ○ 0

▎⑂ main ┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄🮇
▌? claude                            ▐
▌  investigate destructive query guar▐
▌  ▢ ──────────────────────────    0%▐
▎⣾ codex · GPT 5.5 · 272k            🮇
▎  add tests                         🮇
▎  ▢ ──────────────────────────    0%🮇

 ────────────────────────────────────
  W: ◎ 0  ◇ 0 ↘ 0 ↗ 0 ◌ 0       $0.00
  M: ◎ 0  ◇ 0 ↘ 0 ↗ 0 ◌ 0       $0.00

      Alt+p sidebar/back · ? for help
